--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ td, th {
 	font-size: 2em;
 	margin: 0 0 1em;
 	clear: left;
+	text-shadow: 2px 1px #343434;
 }
 
 .principal {
@@ -268,9 +269,35 @@ td, th {
 
 .imagem-beneficios {
 	width: 60%;
+	opacity: 0.85;
+	transition: 700ms;
+	box-shadow: 5px 5px 10px 5px #000000;
+}
+
+.imagem-beneficios:hover {
+	opacity: 1;
 }
 
 .video {
 	width: 560px;
 	margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+		width: auto;
+	}
+
+	h1 {
+		text-align: center;
+	}
+
+	nav {
+		position: static;
+	}
+
+	.lista-beneficios, .imagem-beneficios {
+		width: 100%;
+		margin: 0.5em 0;
+	}
 }
